--- a/views/list.hbs
+++ b/views/list.hbs
@@ -8,6 +8,7 @@
     <th scope="col">Email</th>
     <th></th>
     <th></th>
+    <th></th>
 </tr>
 </thead>
 <tbody>
@@ -20,8 +21,11 @@
     <td>{{email}}</td>
     <td><i class="bi bi-pencil-square"></i></td>
     <td><i class="bi bi-cloud-sleet-fill"></i></td>
+    <td><a href="/alunos/edit/{{matricula}}">Editar</a></td>
 </tr>
 
 {{/each}}
 </tbody>
 </table>
+
+<a href="/alunos/new">Adicionar novo Aluno</a>
