--- a/views/list.hbs
+++ b/views/list.hbs
@@ -6,9 +6,8 @@
     <th scope="col">Nome</th>
     <th scope="col">data de Nacimento</th>
     <th scope="col">Email</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th scope="col">Editar</th>
+    <th scope="col">Apagar</th>
 </tr>
 </thead>
 <tbody>
@@ -19,13 +18,15 @@
     <td> <a href="/alunos/{{matricula}}">{{nome}}</a> </td>
     <td>{{data_nascimento}}</td>
     <td>{{email}}</td>
-    <td><i class="bi bi-pencil-square"></i></td>
+    <td><a href="/alunos/edit/{{matricula}}"><i class="bi bi-pencil-square"></i></a></td>
     <td><i class="bi bi-cloud-sleet-fill"></i></td>
-    <td><a href="/alunos/edit/{{matricula}}">Editar</a></td>
+    
 </tr>
 
 {{/each}}
 </tbody>
 </table>
 
-<a href="/alunos/new">Adicionar novo Aluno</a>
+<button type="button" class="btn btn-outline-light"><a href="/alunos/new">Adicionar novo aluno <i class="bi bi-person-add"></i></a></button>
+
+{{!-- <a href="/alunos/new">Adicionar novo Aluno</a> --}}
