--- a/views/card.hbs
+++ b/views/card.hbs
@@ -17,8 +17,8 @@
         <h1>Detalhes do Aluno</h1>
         <div class="card mb-3" style="max-width: 540px;">
             <div class="card-body">
-                <h5 class="card-title">John Doe</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">john.doe@example.com</h6>
+                <h5 class="card-title">{{aluno.nome}}</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">{{aluno.email}}</h6>
                 <p><em>(Campo opicional) Espaço reservado para colocar uma breve
                         descrição do aluno.</em></p>
             </div>
@@ -29,7 +29,7 @@
             <div class="card-body">
                 <a href="/alunos/edit/{{alnuno.matricula}}" class="card-link">Editar
                     <i class="bi bi-pencil-square"></i></a>
-                <a href="./delete/1234567" class="card-link">Remover
+                <a href="./delete" class="card-link">Remover
                     <i class="bi bi-trash"></i></a>
             </div>
         </div>
