--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/alunos">alunos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sobre" tabindex="-1" aria-disabled="true">Sobre</a>
+          <a class="nav-link" href="/api_inclusimap{{id_horario}}" tabindex="-1" aria-disabled="true">Sobre</a>
         </li>
       </ul>
     </div>
